[workspace]
members = ["core", "scheduler", "engine", "scheduler-external"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Apaar"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "5"
solana-program = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
criterion = "0.5"
tokio-test = "0.4"
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
quinn = "0.11"
rustls = "0.23"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.17.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rustls-pemfile = "2.0"
rcgen = "0.12"
