[package]
name = "blunder-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
solana-program = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
name = "blunder_core"
path = "src/lib.rs"

[dev-dependencies]
once_cell = "1.17.1"
