[package]
name = "blunder-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blunder-core = { path = "../core" }
blunder-scheduler = { path = "../scheduler" }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = { workspace = true }

[[bin]]
name = "blunder-tpu"
path = "src/main.rs"

[lib]
name = "blunder_engine"
path = "src/lib.rs"