[package]
name = "blunder-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blunder-core = { path = "../core" }
blunder-scheduler = { path = "../scheduler" }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rustls = "0.23"

[dev-dependencies]
criterion = { workspace = true }
tokio-test = { workspace = true }
once_cell = "1.17.1"
rustls = "0.23"

[[bin]]
name = "blunder-tpu"
path = "src/main.rs"

[lib]
name = "blunder_engine"
path = "src/lib.rs"

