[package]
name = "blunder-scheduler-external"
version = "0.1.0"
edition = "2021"

[dependencies]
blunder-core = { path = "../core" }
blunder-scheduler = { path = "../scheduler" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
quinn = "0.11"
rustls = "0.23"
rustls-pemfile = "2.0"
rcgen = "0.12"
