[package]
name = "blunder-scheduler-external"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blunder-core = { path = "../core" }
blunder-scheduler = { path = "../scheduler" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
