[package]
name = "blunder-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blunder-core = { path = "../core" }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lib]
name = "blunder_scheduler"
path = "src/lib.rs"